add_library(toy2d)

target_sources(toy2d
    PUBLIC
        toy2d.hpp
        context.hpp
        utility.hpp
        swapchain.hpp
        shader.hpp
        render_process.hpp
        renderer.hpp
        command_manager.hpp
    PRIVATE
        toy2d.cpp
        context.cpp
        utility.cpp
        swapchain.cpp
        shader.cpp
        render_process.cpp
        renderer.cpp
        command_manager.cpp
)
